--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                 <img id="social-image" src="./images/social-media.png" alt="logo">
             </div>
         </div>
+        <div class="hero-section-middle">
+             <div id="card1" class="card">Total Questions's</div>
+             <div id="card2" class="card">Total Answer's</div>
+             <div id="card3" class="card">Participated</div>
+             <div id="card4" class="card">Total Passed<span ><img  id="support-icon" src="./images/Group 2.png"/></span></div>
+        </div>
     </div>
     
 </body>
