card three added

--- a/index.html
+++ b/index.html
@@ -37,12 +37,31 @@
             </div>
         </div>
         <div class="hero-section-middle">
-             <div id="card1" class="card">Total Questions's</div>
-             <div id="card2" class="card">Total Answer's</div>
-             <div id="card3" class="card">Participated</div>
-             <div id="card4" class="card">Total Passed<span ><img  id="support-icon" src="./images/Group 2.png"/></span></div>
+             <div id="card1" class="card">Total Questions's<span class="numbers">100,000</span></div>
+             <div id="card2" class="card">Total Answer's<span class="numbers">70,000</span></div>
+             <div id="card3" class="card">Participated<span class="numbers">60,000</span></div>
+             <div id="card4" class="card">Total Passed<span class="numbers">55,000</span></div>
         </div>
+
+       <div class="hero-three-wrapper">
+        <div class="hero-section-three">
+            <div class="options">
+                <div  id="info"class="mini-cards">YOUR INFO</div>
+                <div id="bookmarks" class="mini-cards">BOOKMARKS</div>
+                <div id="settings" class="mini-cards">SETTINGS</div>
+            </div>
+            <div class="info-div">
+                <h2>Your info</h2>
+                <p>Name: Saumya Srivastava</p>
+                <p>Email: demo@gmail.com</p>
+                <p>Phone: 9197827811</p>
+                <p>Marks: 94</p>
+            </div>
+       </div>
+       </div>
     </div>
-    
+    <div class="support-icon">
+        <img src="./images/Group 2.png" alt="Support Icon">
+    </div>
 </body>
 </html>
