--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Delius+Unicase:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Delius+Unicase:wght@400;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -50,12 +56,14 @@
                 <div id="bookmarks" class="mini-cards">BOOKMARKS</div>
                 <div id="settings" class="mini-cards">SETTINGS</div>
             </div>
+            
             <div class="info-div">
                 <h2>Your info</h2>
                 <p>Name: Saumya Srivastava</p>
                 <p>Email: demo@gmail.com</p>
                 <p>Phone: 9197827811</p>
                 <p>Marks: 94</p>
+                <button id="next-button"> Next</button>
             </div>
        </div>
        </div>
