card three done

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="hero-section-top">
             <div class="img-div"><img id="main-image" src="./images/image 4.png" alt="logo"/></div>
             <div class="text-div">
-               <p>It's not only writers who can benefit from this free online tool. If you're a programmer who's working on a ......</p>
+                <textarea readonly>It's not only writers who can benefit from this free online tool. If you're a programmer who's working on a ......</textarea>
             </div>
             <div class="social-div">
                 <img id="social-image" src="./images/social-media.png" alt="logo">
