--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <div class="text-div">
                 <textarea readonly>It's not only writers who can benefit from this free online tool. If you're a programmer who's working on a ......</textarea>
             </div>
-            <div class="social-div">
+            <!-- <div class="social-div">
                 <img id="social-image" src="./images/social-media.png" alt="logo">
-            </div>
+            </div> -->
         </div>
         <div class="hero-section-middle">
              <div id="card1" class="card">Total Questions's<span class="numbers">100,000</span></div>
@@ -82,8 +82,12 @@
        </div>
        </div>
     </div>
+    <div class="social-div">
+        <img id="social-image" src="./images/social-media.png" alt="logo">
+    </div>
     <div class="support-icon">
         <img src="./images/Group 2.png" alt="Support Icon">
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
