card three done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                      <a href="#">Home</a>
                      <a href="#">About Us</a>
                      <a href="#">Information</a>
-                     <a href="#">More<i class="fa-solid fa-chevron-down"></i></a>
+                     <a href="#">More  <span class="down-arrow">
+                        <i class="fas fa-chevron-down"></i>
+                    </span></a>
                  
              </div>
              <div class="search-bar">
@@ -45,9 +47,7 @@
             <div class="text-div">
                 <textarea readonly>It's not only writers who can benefit from this free online tool. If you're a programmer who's working on a ......</textarea>
             </div>
-            <!-- <div class="social-div">
-                <img id="social-image" src="./images/social-media.png" alt="logo">
-            </div> -->
+           
         </div>
         <div class="hero-section-middle">
              <div id="card1" class="card">Total Questions's<span class="numbers">100,000</span></div>
